# wykop-scrapper

./: .gitignore  README.md  cfg.py  pyproject.toml  wykop_scrapper.ipynb
