[tool.poetry]
name = "amc"
version = "0.1.0"
authors = ["Robert Hejda roberthejdadev@gmail.com"]
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
wykop-sdk-reborn = "^0.9.4"
beautifulsoup4 = "^4.11.1"
plotly = "^5.10.0"
ipykernel = "^6.16.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
